fixed the urls on buy btns, small footer icons and width, gradient column flex, footer z-index

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,7 +6,10 @@ footer{
     color: white;
     /* border-bottom: 0.5rem solid var(--darkest-color); */
     margin-top: 5rem;
-    z-index: 1;
+    z-index: 100;
+    width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
 
@@ -84,15 +87,21 @@ footer{
     line-height: 1.3;
   }
 
-  .footer__list{
+  .footer__list li{
     
-    margin: 0;
+    margin: 0.125rem;
     /* border-left: 0.125rem solid var(--secondary-color); */
     list-style-type: none;
     display: flex;
     
     gap: 0.75rem;
 
+  }
+
+
+  .footer__list {
+    list-style-type: none;
+    display: flex;
   }
 
   .footer__link{
