--- a/src/components/searchBar/searchBar.css
+++ b/src/components/searchBar/searchBar.css
@@ -123,7 +123,7 @@
    }
 
     .search-results__screenshots{
-        grid-template-columns: 1fr 1fr 1fr;
+        /* grid-template-columns: 1fr 1fr 1fr; */
     }
 
 
